--- a/resources/assets/scss/style.css
+++ b/resources/assets/scss/style.css
@@ -12,3 +12,32 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
 #servers .card {
   cursor: pointer;
 }
+
+.navbar-header .navbar-brand .brand-logo {
+  width: 80% !important;
+}
+
+table .bg-primary {
+  background-color: #135669 !important;
+}
+
+table .btn-outline-danger {
+  color: #fa626b;
+  border-color: #fa626b;
+}
+
+table .btn-outline-danger:not(:disabled):not(.disabled):active,
+table .btn-outline-danger:not(:disabled):not(.disabled).active,
+table .show > .btn-outline-danger.dropdown-toggle,
+table .btn-outline-danger:hover {
+  border-color: #fa626b;
+  background-color: #fa626b;
+}
+
+form .form-control.is-invalid {
+  border-color: #fa626b;
+}
+
+form .form-control.is-valid {
+  border-color: #5ed84f;
+}
