--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,42 +1,1 @@
-/*================================================================================
-	Item Name: Modern Admin - Clean Bootstrap 4 Dashboard HTML Template
-	Version: 1.0
-	Author: PIXINVENT
-	Author URL: http://www.themeforest.net/user/pixinvent
-================================================================================
-
-NOTE:
-------
-PLACE HERE YOUR OWN SCSS CODES AND IF NEEDED, OVERRIDE THE STYLES FROM THE OTHER STYLESHEETS.
-WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BETTER LIKE THIS.  */
-#servers .card {
-  cursor: pointer;
-}
-
-.navbar-header .navbar-brand .brand-logo {
-  width: 80% !important;
-}
-
-table .bg-primary {
-  background-color: #135669 !important;
-}
-table .btn-outline-danger {
-  color: #fa626b;
-  border-color: #fa626b;
-}
-table .btn-outline-danger:not(:disabled):not(.disabled):active,
-table .btn-outline-danger:not(:disabled):not(.disabled).active,
-table .show > .btn-outline-danger.dropdown-toggle,
-table .btn-outline-danger:hover {
-  border-color: #fa626b;
-  background-color: #fa626b;
-}
-
-form .form-control.is-invalid {
-  border-color: #fa626b;
-}
-form .form-control.is-valid {
-  border-color: #5ed84f;
-}
-
-/*# sourceMappingURL=style.css.map */
+#servers .card{cursor:pointer}.navbar-header .navbar-brand .brand-logo{width:80% !important}table .bg-primary{background-color:#135669 !important}table .btn-outline-danger{color:#fa626b;border-color:#fa626b}table .btn-outline-danger:not(:disabled):not(.disabled):active,table .btn-outline-danger:not(:disabled):not(.disabled).active,table .show>.btn-outline-danger.dropdown-toggle,table .btn-outline-danger:hover{border-color:#fa626b;background-color:#fa626b}form .form-control.is-invalid{border-color:#fa626b !important}form .form-control.is-valid{border-color:#5ed84f !important}form .invalid-feedback{color:#fa626b !important;display:block}/*# sourceMappingURL=style.css.map */
